--- a/client/src/components/styles/App.css
+++ b/client/src/components/styles/App.css
@@ -1,3 +1,13 @@
-body {
+* {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
+}
+
+body {
+  /* height: 100vh;
+  width: 100%; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
