--- a/client/src/components/styles/ActivityCard.css
+++ b/client/src/components/styles/ActivityCard.css
@@ -18,6 +18,23 @@
   transition: 0.1s ease-in-out all;
 }
 
+.a-heart-container {
+  position: absolute;
+  top: 15px;
+  right: 15px;
+}
+
+.white-circle {
+  position: absolute;
+  top: 4.7px;
+  right: 7px;
+  background-color: white;
+  opacity: 60%;
+  border-radius: 50%;
+  width: 28px;
+  height: 28px;
+}
+
 .activity-heart-icon {
   opacity: 70%;
   background: inherit;
@@ -52,12 +69,35 @@
   width: 12px;
 }
 
-.a-heart-container {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-}
-
 .activity-image-container {
   position: relative;
+  margin-bottom: 5px;
+}
+
+.activity-rating {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 13px;
+}
+
+.activity-rating-container {
+  margin-bottom: 5px;
+}
+
+.a-numb-reviews {
+  color: grey;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 13px;
+}
+
+.activity-price {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 15px;
+  font-weight: 700;
+}
+
+.activity-descrip, .activity-pperson {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+  font-size: 13.5px;
+  margin-bottom: 5px;
 }
