--- a/client/src/components/styles/App.css
+++ b/client/src/components/styles/App.css
@@ -16,3 +16,14 @@ body {
 .star-icon {
   color: #FF5A5F;
 }
+
+.white-circle {
+  position: absolute;
+  top: 4.7px;
+  right: 7px;
+  background-color: white;
+  opacity: 60%;
+  border-radius: 50%;
+  width: 28px;
+  height: 28px;
+}
