--- a/client/src/components/styles/Modal.css
+++ b/client/src/components/styles/Modal.css
@@ -49,6 +49,7 @@
   text-align: center;
   margin-right: 85px;
   margin-left: 85px;
+  /* border: 1px solid red; */
 }
 
 .modal-image { 
@@ -59,13 +60,16 @@
   bottom: 20px;
   left: 12vw;
   box-shadow: 5px 5px 10px -5px rgba(0,0,0,0.55);
+  border: 1px solid green;
+  margin-right: 5px;
 }
 
 .modal-button {
   border-radius: 10px;
   cursor: pointer;
   border: 1px solid grey;
-  width: 175px;
+  /* width: 175px; */
+  width: 15vw;
   height: 40px;
   font-family: 'Montserrat', sans-serif;
   font-weight: 500;
@@ -88,4 +92,6 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  /* border: 1px solid pink; */
+  margin-left: 10px;
 }
