remove body tag

--- a/client/src/components/styles/Modal.css
+++ b/client/src/components/styles/Modal.css
@@ -60,7 +60,7 @@
   bottom: 20px;
   left: 12vw;
   box-shadow: 5px 5px 10px -5px rgba(0,0,0,0.55);
-  border: 1px solid green;
+  /* border: 1px solid green; */
   margin-right: 5px;
 }
 
