--- a/client/src/components/styles/App.css
+++ b/client/src/components/styles/App.css
@@ -1,6 +1,4 @@
 #service5 {
-  /* height: 100vh;
-  width: 100%; */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -8,6 +6,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  width: 100vw;
 }
 
 .star-icon {
