--- a/client/src/components/styles/Modal.css
+++ b/client/src/components/styles/Modal.css
@@ -53,7 +53,7 @@
 
 .modal-image { 
   border-radius: 20px;
-  width: 10vw;
+  width: 11vw;
   height: auto;
   box-shadow: 5px 5px 10px -5px rgba(0,0,0,0.55);
   margin-right: 50px;
@@ -62,7 +62,7 @@
 .modal-button {
   border-radius: 10px;
   cursor: pointer;
-  border: 1px solid grey;
+  /* border: 1px solid grey; */
   width: 15vw;
   font-family: 'Montserrat', sans-serif;
   font-weight: 500;
@@ -71,6 +71,9 @@
   box-shadow: 5px 5px 10px -5px rgba(0,0,0,0.55);
   padding: 10px;
   margin-bottom: 10px;
+  border: none;
+  background-color: #f2f2f2;
+  outline: none;
 }
 
 .modal-button:hover {
@@ -78,14 +81,10 @@
 }
 
 .modal-button-container {
-  right: 12vw;
-  height: 100px;
-  bottom: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  border: 1px solid pink;
   padding: 15px;
 }
 
